<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_weather">

    <fragment
        android:id="@+id/navigation_forecast"
        android:name="com.kasim.weatherAndroid.ui.forecast.ForecastFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_forecast" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.kasim.weatherAndroid.ui.weather.WeatherFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.kasim.weatherAndroid.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />
</navigation>