<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="4dp"
                android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/white_half_transparent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_low_temperature_thermometer" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/built_titling_regular"
                        android:gravity="center"
                        android:shadowColor="@color/colorShadow"
                        android:shadowDx="-1"
                        android:shadowDy="-1"
                        android:shadowRadius="1"
                        android:text="@string/feels_like"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/feels_like"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/built_titling_medium"
                        android:gravity="center"
                        android:shadowColor="@color/colorShadow"
                        android:shadowDx="-1"
                        android:shadowDy="-1"
                        android:shadowRadius="1"
                        android:text="0 °C"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/white_half_transparent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_wind_lines" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/built_titling_regular"
                        android:gravity="center"
                        android:shadowColor="@color/colorShadow"
                        android:shadowDx="-1"
                        android:shadowDy="-1"
                        android:shadowRadius="1"
                        android:text="@string/wind"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/built_titling_medium"
                        android:gravity="center"
                        android:shadowColor="@color/colorShadow"
                        android:shadowDx="-1"
                        android:shadowDy="-1"
                        android:shadowRadius="1"
                        android:text="0 m/s"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/white_half_transparent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_humidity" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/built_titling_regular"
                        android:gravity="center"
                        android:shadowColor="@color/colorShadow"
                        android:shadowDx="-1"
                        android:shadowDy="-1"
                        android:shadowRadius="1"
                        android:text="@string/humidity"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/built_titling_medium"
                        android:gravity="center"
                        android:shadowColor="@color/colorShadow"
                        android:shadowDx="-1"
                        android:shadowDy="-1"
                        android:shadowRadius="1"
                        android:text="0 %"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/white_half_transparent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_pressure" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/built_titling_medium"
                        android:gravity="center"
                        android:shadowColor="@color/colorShadow"
                        android:shadowDx="-1"
                        android:shadowDy="-1"
                        android:shadowRadius="1"
                        android:text="@string/pressure"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/built_titling_medium"
                        android:gravity="center"
                        android:shadowColor="@color/colorShadow"
                        android:shadowDx="-1"
                        android:shadowDy="-1"
                        android:shadowRadius="1"
                        android:text="0.0 in"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/scrollLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp" />
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvForecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/white_half_transparent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>